# xlsynth-bvc

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docker/: xlsynth-driver.Dockerfile  yosys-abc.Dockerfile
docs/: batched-persistent-runners-plan.md  hermetic-action-design.md  ir-dir-corpus-runner.md
flows/: abc_ablate_baseline.ys  abc_ablate_no_dc2.ys  abc_ablate_no_dch.ys  abc_ablate_no_dretime.ys  abc_ablate_no_fraig.ys  abc_ablate_no_nf.ys  abc_ablate_no_scorr.ys  abc_custom_try.ys  yosys_to_aig.ys
scripts/: check_spdx_headers.py  persistent_runner_worker.py  sync-version-compat.sh
src/: app.rs  cli.rs  corpus.rs  executor.rs  main.rs  model.rs  ops.rs  query.rs  queue.rs  runtime.rs  sled_space.rs  snapshot.rs  store.rs  versioning.rs  view.rs
src/query/: corpus_structural.rs
src/service/: core.rs  mod.rs  runtime_docker.rs  structural_index.rs
src/web/: cache.rs  mod.rs  render.rs  routes_action.rs  routes_api.rs  routes_corpus.rs  routes_db.rs  routes_dslx.rs  routes_versions.rs  types.rs
testdata/persistent_runners/: fake-driver.Dockerfile  fake-yosys.Dockerfile  fake_delay_info_main.py  fake_protoc.py  fake_xlsynth_driver.py  fake_yosys.py
