[package]
name = "xlsynth_bvc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
hex = "0.4"
log = "0.4"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
tokio = { version = "1.44", features = ["macros", "net", "rt-multi-thread"] }
walkdir = "2.5"
zstd = "0.13"
